--- a/2/Imunno.mos.ru_Jamal/index.html
+++ b/2/Imunno.mos.ru_Jamal/index.html
@@ -71,7 +71,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.3/qrcode.min.js"></script>
     <script>
-        let text = '________________';
+        let text = 'immunemoc.github.io/2/Imunno.mos.ru_Jamal/';
 
         let typeNumber = 3;
         let errorLevel = 'M';
